Fix userid format to conform to RFC1413.  Fix from der Mouse in PR1848.